--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <a href="https://www.instagram.com/nivethacse/" target="blank"><i class="bi bi-instagram fa-2x"></i></a>
               <a href="https://twitter.com/Nivethacse" target="blank"><i class="bi bi-twitter fa-2x"></i></a>
               <a href="https://github.com/nivethacse" target="blank"><i class="bi bi-github fa-2x"></i></a>
-              <!--<a href="https://dribbble.com/ElviraFir" target="blank"><i class="fab fa-dribbble fa-2x"></i></a>-->
+              
             </div>
             <a href="cv.pdf" target="_blank" class="btn btn-primary">Download CV &nbsp; <span class="iconify" data-inline="false" data-icon="akar-icons:send"></span></a>
           </div>
@@ -221,7 +221,7 @@
 
         <div class="row ">
           <div class="col d-flex justify-content-center p-3">
-            <a href="https://github.com/elvirafimansyah" target="_blank" class="btn btn-loadmore text-light">Load More</a>
+            <a href="https://github.com/nivethacse" target="_blank" class="btn btn-loadmore text-light">Load More</a>
 
           </div>  
         </div>
@@ -258,7 +258,7 @@
                 <img src="img/uibrowser.png" class="img-fluid" alt="">
               </div>
               <div class="card-text">
-                <a href="https://dribbble.com/shots/16228234-My-Browser-Design-Draniz-Browser-Ui-Design-Elvira" target="_blank" class="btn btn-orange course"><i class="fab fa-dribbble"></i></i>&ensp;View Dribbble</a>
+                <a href="" target="_blank" class="btn btn-orange course"><i class="fab fa-dribbble"></i></i>&ensp;View Dribbble</a>
               </div>
             </div>
           </div>
@@ -461,7 +461,7 @@
             <!-- Dribble
             <a
               class="btn btn-link btn-floating btn-lg text-light m-1"
-              href="https://dribbble.com/ElviraFir"
+              href=""
               role="button"
               data-mdb-ripple-color="dark"
               target="blank"><i class="fab fa-dribbble"></i></a> -->
