--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <!-- My Projects -->
     <div class="bubble">
-      <img src="img/t.svg" class="circle2 img-fluid" alt="">
+      <!--<img src="img/t.svg" class="circle2 img-fluid" alt="">-->
       <div class="circle img-fluid"></>
     </div>
     <section id="projects">
