--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </section>
     <!-- Akhir Client Feedback-->
 
-    <section id="portfolio">
+    <!--<section id="portfolio">
       <div class="bubble"></div>
       <div class="container">
         <div class="row">
