--- a/index.html
+++ b/index.html
@@ -467,9 +467,9 @@
               role="button"
               data-mdb-ripple-color="dark"
               target="blank"><i class="fab fa-dribbble"></i></a> -->
-          </section>
+          </section>-->
           <!-- Section: Social media -->
-      </div>-->
+      </div>
       <!-- Copyright -->
       <div class="text-center text-white p-3 fw-bold " style="background-color: #728df6; border-top: 2px solid var(--blue)">
           © 2021 Copyright | All Rights Reserved
