--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
           </div>
         </div>
       </div>
-    </section>
+    <!--</section>
 
    <!-- <footer class="text-center text-white copyright" style="background-color: var(--pink);  border-top: 2px solid rgb(243, 71, 192)">
       <div class="container pt-4">
