--- a/index.html
+++ b/index.html
@@ -426,48 +426,9 @@
           </div>
         </div>
       </div>
-    <!--</section>
+    </section>
 
-   <!-- <footer class="text-center text-white copyright" style="background-color: var(--pink);  border-top: 2px solid rgb(243, 71, 192)">
-      <div class="container pt-4">
-          <!-- Social Media -->
-          <section class="mb-4">
-            <h2 class="footername">Made By Nivetha.s</h2>
-            <!-- Twitter -->
-            <a
-              class="btn btn-link btn-floating btn-lg text-light m-1"
-              href="https://twitter.com/Nivethacse"
-              role="button"
-              data-mdb-ripple-color="dark"
-              target="blank"><i class="fab fa-twitter"></i
-            ></a>
-
-            <!-- Instagram -->
-            <a
-              class="btn btn-link btn-floating btn-lg text-light m-1"
-              href="https://www.instagram.com/nivethacse/"
-              role="button"
-              data-mdb-ripple-color="dark"
-              target="blank"><i class="fab fa-instagram"></i
-            ></a>
-
-            <!-- Github -->
-            <a
-              class="btn btn-link btn-floating btn-lg text-light m-1"
-              href="https://github.com/nivethacse"
-              role="button"
-              data-mdb-ripple-color="dark"
-              target="blank"><i class="fab fa-github"></i
-            ></a>
-
-            <!-- Dribble
-            <a
-              class="btn btn-link btn-floating btn-lg text-light m-1"
-              href=""
-              role="button"
-              data-mdb-ripple-color="dark"
-              target="blank"><i class="fab fa-dribbble"></i></a> -->
-          </section>-->
+   
           <!-- Section: Social media -->
       </div>
       <!-- Copyright -->
