--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               </div>
               <div class="card-text">
                 <a href="https://iceandfireapihackathon.netlify.app/" class="btn btn-tosqatua" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                <a href="https://github.com/nivethacse/iceandfireapi" class="btn btn-tosqatua" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                <a href="https://github.com/nivethacse/iceandfireapi" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               </div>
             </div>
           </div>
@@ -244,7 +244,7 @@
                 <img src="img/sharre.PNG" class="img-fluid" width="1200" height="900" alt="">
               </div>
               <div class="card-text">
-                <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-purple" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-tosqatua" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://github.com/nivethacse/shareapi" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               </div>
             </div>
@@ -255,7 +255,7 @@
                 <img src="img/fd.PNG"class="img-fluid engxzu" alt="">
               </div>
               <div class="card-text">
-                <a href="https://nostalgic-dubinsky-912840.netlify.app/" target="_blank" class="btn btn-aqua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                <a href="https://nostalgic-dubinsky-912840.netlify.app/" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://github.com/nivethacse/DAY19--FORM-TASK" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               </div>
             </div>
@@ -266,7 +266,7 @@
                 <img src="img/pinterest.PNG"class="img-fluid engxzu" alt="">
               </div>
               <div class="card-text">
-                <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-aqua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://github.com/nivethacse/pinterest-clone" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               </div>
             </div>
