--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             <div class="sosialmedia">
               <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=akshaya2d@gmail.com" target="_blank"><i class="bi bi-envelope-fill fa-2x"></i></a>
-              <a href="https://www.instagram.com/nivethacse/" target="blank"><i class="bi bi-instagram fa-2x"></i></a>
-              <a href="https://twitter.com/Nivethacse" target="blank"><i class="bi bi-twitter fa-2x"></i></a>
+              <a href="https://www.linkedin.com/in/nivetha-sathiyanarayanan-06913665/" target="blank"><i class="bi bi-linkedin fa-2x"></i></a>
+             <!--<a href="https://twitter.com/Nivethacse" target="blank"><i class="bi bi-twitter fa-2x"></i></a>-->
               <a href="https://github.com/nivethacse" target="blank"><i class="bi bi-github fa-2x"></i></a>
               
             </div>
