--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       <!--<div class="bubble"></div>-->
       <div class="container">
         <div class="row">
-          <p>Services </p>
-          <h2 class="bawah1">Create Solutions</h2>
+          
+          <h2 class="bawah1">Skills</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-sm-12">
@@ -233,8 +233,8 @@
                 <img src="img/icenadfire.PNG" class="img-fluid" width="1200" height="900" alt="">
               </div>
               <div class="card-text">
-                <a href="https://iceandfireapihackathon.netlify.app/" class="btn btn-tosqatua" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                <a href="https://github.com/nivethacse/iceandfireapi" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                <a href="https://github.com/nivethacse/ecom" class="btn btn-tosqatua" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                <a href="https://vercel.com/nivethacse/ecom" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               </div>
             </div>
           </div>
@@ -252,18 +252,18 @@
           <div class="col-lg-4 col-sm-12 justify-content-center d-flex">
             <div class="main-card">
               <div class="card-image">
-                <img src="img/fd.PNG"class="img-fluid engxzu" alt="">
+                <img src="img/fd.PNG"class="img-fluid engxzu" width="1200" height="900" alt="">
               </div>
               <div class="card-text">
-                <a href="https://nostalgic-dubinsky-912840.netlify.app/" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                <a href="https://github.com/nivethacse/DAY19--FORM-TASK" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                <a href="https://github.com/nivethacse/te" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                <a href="https://te-five.vercel.app/" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-sm-12 justify-content-center d-flex">
             <div class="main-card">
               <div class="card-image">
-                <img src="img/pinterest.PNG"class="img-fluid engxzu" alt="">
+                <img src="img/pinterest.PNG"class="img-fluid engxzu" width="1200" height="900"alt="">
               </div>
               <div class="card-text">
                 <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
