--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <div class="card-image">
                 <img src="img/icenadfire.PNG" class="img-fluid" width="1200" height="900" alt="">
               </div>
-              <p class="card-text">TECHNOLOGY USED-HTML,CSS,JS,REACT.JS</p>
+              <p class="bg-light text-dark">E-COMMERCE WEBSITE-HTML,CSS,JS,REACT.JS</p>
               <div class="card-text">
                 <a href="https://github.com/nivethacse/ecom" class="btn btn-tosqatua" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://vercel.com/nivethacse/ecom" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -244,7 +244,7 @@
               <div class="card-image">
                 <img src="img/sharre.PNG" class="img-fluid" width="1200" height="900" alt="">
               </div>
-              <p class="card-text">TECHNOLOGY USED-HTML,CSS,JS,REACT.JS,FIRE BASE</p>
+              <p class="bg-light text-dark">SHARE.IO -HTML,CSS,JS,REACT.JS,FIRE BASE</p>
               <div class="card-text">
                 <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-tosqatua" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://github.com/nivethacse/shareapi" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -256,7 +256,7 @@
               <div class="card-image">
                 <img src="img/fd.PNG"class="img-fluid engxzu" width="1200" height="900" alt="">
               </div>
-               <p class="card-text">TECHNOLOGY USED-HTML,CSS,JS,REACT.JS,MONGODB</p>                                                                               
+               <p class="bg-light text-dark">TEXT EDITOR-HTML,CSS,JS,REACT.JS,MONGODB</p>                                                                               
               <div class="card-text">
                 <a href="https://github.com/nivethacse/te" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://te-five.vercel.app/" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -268,7 +268,7 @@
               <div class="card-image">
                 <img src="img/pinterest.PNG"class="img-fluid engxzu" width="1200" height="900"alt="">
               </div>
-               <p class="card-text">TECHNOLOGY USED-HTML,CSS,JS,REACT.JS,FIREBASE</p>                                                                                   
+               <p class="bg-light text-dark">PINTEREST CLONE-HTML,CSS,JS,REACT.JS,FIREBASE</p>                                                                                   
               <div class="card-text">
                 <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-tosqatua"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                 <a href="https://github.com/nivethacse/pinterest-clone" class="btn btn-purple" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
