--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
         <div class="row">
           <div class="col mb-2">
-            <h4 class="front-projects text-projects">full stack Projects</h4>
+            <h4 class="front-projects text-projects">Full stack Projects</h4>
           </div>
         </div>
         <div class="row card-projects">
