--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <a href="https://github.com/nivethacse" target="blank"><i class="bi bi-github fa-2x"></i></a>
               
             </div>
-            <a href="cv.pdf" target="_blank" class="btn btn-primary">Download CV &nbsp; <span class="iconify" data-inline="false" data-icon="akar-icons:send"></span></a>
+            <a href="https://drive.google.com/file/d/1CylGEqqFo5knhcIJN5dXYrdS5wtdDQoo/view?usp=sharing" target="_blank" class="btn btn-primary">Download CV &nbsp; <span class="iconify" data-inline="false" data-icon="akar-icons:send"></span></a>
           </div>
           <div class="col-lg-6 ">
             <div class="lingkaran"></div>
