--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="col-lg-3 col-sm-12">
           <div class="main-skills skill1">
             <div class="card-skills text-center">
-              <img src="img/reactIcon.png" alt="">
+              <img src="img/reactIcon.png" alt="" width="87">
               <h6>REACT</h6>
               <span>95%</span>
             </div>
