--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     </div>
       <section id="projects">
       <div class="container mt-3">
-          <h1 class="text-center">Portfolio</h1>
+          <h1 class="text-center">Projects</h1>
           <div class="row">
             <div class="col-lg-4 mt-4">
               <div class="card portfolioContent">
@@ -314,8 +314,8 @@
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
                       <p class="bg-light text-dark">HTML,CSS,JS,REACT.JS</p>
                       <div class="text-center">
-                          <a href="https://github.com/nivethacse/ecom" class="btn btn-success">github</a>
-                          <a href="https://vercel.com/nivethacse/ecom" class="btn btn-dark" target="_blank"></i>&ensp;Github</a>
+                          <a href="https://github.com/nivethacse/ecom" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                          <a href="https://vercel.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               
                       </div>
                   </div>
@@ -327,7 +327,7 @@
                       <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
-                          <p class="card-text"> -HTML,CSS,JS,REACT.JS,FIRE BASE</p>
+                          <p class="bg-light text-dark"> -HTML,CSS,JS,REACT.JS,FIRE BASE</p>
                           <div class="text-center">
                               <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -342,7 +342,7 @@
                       <img class="card-img-top" src="img/fd.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">TEXT EDITOR</h4>
-                          <p class="card-text">-HTML,CSS,JS,REACT.JS,MONGODB</p>
+                          <p class="bg-light text-dark">-HTML,CSS,JS,REACT.JS,MONGODB</p>
                           <div class="text-center">
                                <a href="https://github.com/nivethacse/te" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                                <a href="https://te-five.vercel.app/" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -358,7 +358,7 @@
                       <img class="card-img-top" src="img/pinterest.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">PINTEREST CLONE</h4>
-                          <p class="card-text">-HTML,CSS,JS,REACT.JS,FIREBASE</p>
+                          <p class="bg-light text-dark">-HTML,CSS,JS,REACT.JS,FIREBASE</p>
                           <div class="text-center">
                               <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/pinterest-clone" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -372,7 +372,7 @@
                       <img class="card-img-top" src="C:\Users\Nivetha\Downloads\portfolio-master\portfolio-master\img\icenadfire.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">Twitter Clone</h4>
-                          <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <p class="bg-light text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                           <div class="text-center">
                               <a href="https://rental-bike.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/rental" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -386,7 +386,7 @@
                       <img class="card-img-top" src="C:\Users\Nivetha\Downloads\portfolio-master\portfolio-master\img\icenadfire.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">Blog App</h4>
-                          <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <p class="bg-light text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                           <div class="text-center">
                             <a href="https://memoriesssss.herokuapp.com/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                              <a href="https://github.com/nivethacse/Memories" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -438,8 +438,36 @@
         </div>
       </div>
     </section>
+                                                                                                      <footer class="text-center text-white copyright"
+          style="background-color: var(--white);  border-top: 2px solid rgb(248, 240, 246)">
+          <div class="container pt-4">
+            <!-- Social Media -->
+            <section class="mb-4">
+              <h2 class="footername">Made By Nivetha.s</h2>
+              <!-- Twitter -->
+              <a class="btn btn-link btn-floating btn-lg text-light m-1" href="https://twitter.com/Nivethacse"
+                role="button" data-mdb-ripple-color="dark" target="blank"><i class="fab fa-twitter"></i></a>
 
-   
+              <!-- Instagram -->
+              <a class="btn btn-link btn-floating btn-lg text-light m-1" href="https://www.instagram.com/nivethacse/"
+                role="button" data-mdb-ripple-color="dark" target="blank"><i class="fab fa-instagram"></i></a>
+
+              <!-- Github -->
+              <a class="btn btn-link btn-floating btn-lg text-light m-1" href="https://github.com/nivethacse"
+                role="button" data-mdb-ripple-color="blue"><i class="fa fa-github"></i></a>target="blank"><i class="fab fa-github"></i></a>
+
+              <!-- Dribble
+            <a
+              class="btn btn-link btn-floating btn-lg text-light m-1"
+              href="https://dribbble.com/ElviraFir"
+              role="button"
+              data-mdb-ripple-color="dark"
+              target="blank"><i class="fab fa-dribbble"></i></a> -->
+            </section>
+            <!-- Section: Social media -->
+          </div>
+         
+
           <!-- Section: Social media -->
       </div>
       <!-- Copyright -->
