--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@
         </div>
       </div>
     </section>
+    <br>
+    <br>
     <!-- Akhir About-->
                                                                               
     <!-- Skills -->
     <section id="skills">
-      <img src="img/bubble.png" class="img-fluid  bubbleend" alt="" width="190">
+     <!--<img src="img/bubble.png" class="img-fluid  bubbleend" alt="" width="190">-->
       <!--<div class="bubble"></div>-->
       <div class="container">
         <div class="row">
