--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                                                                               
     <!-- Skills -->
     <section id="skills">
-     <!--<img src="img/bubble.png" class="img-fluid  bubbleend" alt="" width="190">-->
-      <!--<div class="bubble"></div>-->
+     <img src="img/bubble.png" class="img-fluid  bubbleend" alt="" width="190">
+      <div class="bubble"></div>
       <div class="container">
         <div class="row">
           
