--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
               <div class="col-lg-4 mt-4">
                   <div class="card portfolioContent">
-                      <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%">
+                      <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%" height="165">
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
                           <p class="bg-light text-dark"> -HTML,CSS,JS,REACT.JS,FIRE BASE</p>
