--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
 
               <div class="col-lg-4 mt-4">
                   <div class="card portfolioContent">
-                      <img class="card-img-top" src="C:\Users\Nivetha\Downloads\portfolio-master\portfolio-master\img\icenadfire.PNG" alt="Card image" style="width:100%">
+                      <img class="card-img-top" src="img/SLAM BOOK.png" alt="Card image" style="width:100%">
                       <div class="card-body">
-                          <h4 class="card-title">Blog App</h4>
-                          <p class="bg-light text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <h4 class="card-title">SLAM BOOK</h4>
+                          <p class="bg-light text-dark">HTML,CSS,JS,REACT JS,MONGODB</p>
                           <div class="text-center">
                             <a href="https://memoriesssss.herokuapp.com/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                              <a href="https://github.com/nivethacse/Memories" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
