--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
                   <img class="card-img-top" src="img/icenadfire.PNG" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
-                      <p class="bg-light text-dark">HTML,CSS,JS,REACT.JS</p>
+                      <p class="bg-light text-dark">HTML,CSS,JS,REACTJS</p>
                       <div class="text-center">
-                          <a href="https://github.com/nivethacse/ecom" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                          <a href="https://vercel.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                          <a href="https://vercel.com/nivethacse/ecom" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                          <a href="https://github.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               
                       </div>
                   </div>
@@ -332,7 +332,7 @@
                       <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
-                          <p class="bg-light text-dark"> -HTML,CSS,JS,REACT.JS,FIRE BASE</p>
+                          <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,FIRE BASE</p>
                           <div class="text-center">
                               <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -347,10 +347,10 @@
                       <img class="card-img-top" src="img/fd.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">TEXT EDITOR</h4>
-                          <p class="bg-light text-dark">-HTML,CSS,JS,REACT.JS,MONGODB</p>
+                          <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
-                               <a href="https://github.com/nivethacse/te" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                               <a href="https://te-five.vercel.app/" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                               <a href="https://te-five.vercel.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                               <a href="https://github.com/nivethacse/te" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                           </div>
                       </div>
                   </div>
@@ -363,7 +363,7 @@
                       <img class="card-img-top" src="img/pinterest.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">PINTEREST CLONE</h4>
-                          <p class="bg-light text-dark">-HTML,CSS,JS,REACT.JS,FIREBASE</p>
+                          <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,FIREBASE</p>
                           <div class="text-center">
                               <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/pinterest-clone" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -374,13 +374,13 @@
 
               <div class="col-lg-4 mt-4">
                   <div class="card portfolioContent">
-                      <img class="card-img-top" src="C:\Users\Nivetha\Downloads\portfolio-master\portfolio-master\img\icenadfire.PNG" alt="Card image" style="width:100%">
+                      <img class="card-img-top" src="img/covid.png" style="width:100%">
                       <div class="card-body">
-                          <h4 class="card-title">Twitter Clone</h4>
-                          <p class="bg-light text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <h4 class="card-title">COVID TRACKER</h4>
+                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
-                              <a href="https://rental-bike.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                              <a href="https://github.com/nivethacse/rental" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                              <a href="https://kind-raman-b38283.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                              <a href="https://github.com/nivethacse/tracker" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                           </div>
                       </div>
                   </div>
@@ -391,7 +391,7 @@
                       <img class="card-img-top" src="img/SLAM BOOK.png" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">SLAM BOOK</h4>
-                          <p class="bg-light text-dark">HTML,CSS,JS,REACT JS,MONGODB</p>
+                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                             <a href="https://memoriesssss.herokuapp.com/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                              <a href="https://github.com/nivethacse/Memories" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
