--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
               <div class="col-lg-4 mt-4">
                   <div class="card portfolioContent">
-                      <img class="card-img-top" src="img/covid.png" style="width:100%">
+                      <img class="card-img-top" src="img/covid.png" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">COVID TRACKER</h4>
                           <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGODB</p>
