--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <h1 class="text-center">Projects</h1>
           <div class="row">
             <div class="col-lg-4 mt-4">
-              <div class="card portfolioContent">
+              <div class="card border-secondary mb-3">
                   <img class="card-img-top" src="img/icenadfire.PNG" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
