--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           </div>
 
               <div class="col-lg-4 mt-4">
-                  <div class="card portfolioContent">
+                  <div class="card border-secondary mb-3">
                       <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
@@ -343,7 +343,7 @@
               </div>
 
               <div class="col-lg-4 mt-4">
-                  <div class="card portfolioContent">
+                  <div class="card border-secondary mb-3">
                       <img class="card-img-top" src="img/fd.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">TEXT EDITOR</h4>
@@ -359,7 +359,7 @@
           <br>
           <div class="row">
               <div class="col-lg-4 mt-4">
-                  <div class="card portfolioContent">
+                  <div class="card border-secondary mb-3">
                       <img class="card-img-top" src="img/pinterest.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">PINTEREST CLONE</h4>
@@ -373,7 +373,7 @@
               </div>
 
               <div class="col-lg-4 mt-4">
-                  <div class="card portfolioContent">
+                  <div class="card border-secondary mb-3">
                       <img class="card-img-top" src="img/covid.png" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">COVID TRACKER</h4>
@@ -387,7 +387,7 @@
               </div>
 
               <div class="col-lg-4 mt-4">
-                  <div class="card portfolioContent">
+                  <div class="card border-secondary mb-3">
                       <img class="card-img-top" src="img/SLAM BOOK.png" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">SLAM BOOK</h4>
