--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
                       <p class="bg-light text-dark">HTML,CSS,JS,REACTJS</p>
                       <div class="text-center">
-                          <a href="https://vercel.com/nivethacse/ecom" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                          <a href="https://ecom-4go1ze3jw-nivethacse.vercel.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                           <a href="https://github.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               
                       </div>
@@ -332,7 +332,7 @@
                       <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
-                          <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,FIRE BASE</p>
+                          <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                               <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -363,7 +363,7 @@
                       <img class="card-img-top" src="img/pinterest.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">PINTEREST CLONE</h4>
-                          <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,FIREBASE</p>
+                          <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                               <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/pinterest-clone" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
