--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                       <img class="card-img-top" src="img/covid.png" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">COVID TRACKER</h4>
-                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGODB</p>
+                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS</p>
                           <div class="text-center">
                               <a href="https://kind-raman-b38283.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/tracker" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
