--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                           <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                               <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                              <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                              <a href="https://github.com/nivethacse/shareapi" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                             
                           </div>
                       </div>
@@ -350,7 +350,7 @@
                           <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                                <a href="https://te-five.vercel.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                               <a href="https://github.com/nivethacse/te" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                               <a href="https://github.com/nivethacse/text-editor" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                           </div>
                       </div>
                   </div>
@@ -366,7 +366,7 @@
                           <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                               <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                              <a href="https://github.com/nivethacse/pinterest-clone" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                              <a href="https://github.com/nivethacse/pinterest-clo" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                           </div>
                       </div>
                   </div>
