--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                           <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
                               <a href="https://wizardly-engelbart-8c1ade.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                              <a href="https://github.com/nivethacse/shareapi" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                              <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                             
                           </div>
                       </div>
