--- a/index.html
+++ b/index.html
@@ -373,13 +373,13 @@
 
               <div class="col-lg-4 mt-4">
                   <div class="card border-secondary mb-3">
-                      <img class="card-img-top" src="img/covid.png" style="width:100%" height="167">
+                      <img class="card-img-top" src="img/equipmental rental.PNG" style="width:100%" height="167">
                       <div class="card-body">
-                          <h4 class="card-title">COVID TRACKER</h4>
-                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS</p>
+                          <h4 class="card-title">EQUIPMENT RENTAL</h4>
+                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGO DB</p>
                           <div class="text-center">
-                              <a href="https://kind-raman-b38283.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
-                              <a href="https://github.com/nivethacse/tracker" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
+                              <a href="https://admirable-baklava-c966e9.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                              <a href="https://github.com/nivethacse/equipment-rental-be/tree/main" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                           </div>
                       </div>
                   </div>
