--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
                       <p class="bg-light text-dark">HTML,CSS,JS,REACTJS</p>
                       <div class="text-center">
-                          <a href="https://ecom-4go1ze3jw-nivethacse.vercel.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                          <a href="https://beamish-selkie-3b6673.netlify.app/login" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                           <a href="https://github.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
               
                       </div>
@@ -333,7 +333,7 @@
                           <h4 class="card-title">SHARE.IO</h4>
                           <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,MONGODB</p>
                           <div class="text-center">
-                              <a href="https://6231a0a5cf61020008934b83--heuristic-swanson-4bfcc1.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
+                              <a href="https://playful-nougat-ccc67e.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
                             
                           </div>
