--- a/index.html
+++ b/index.html
@@ -317,23 +317,11 @@
                   <div class="card-body">
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
                       <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGO DB</p>
+                      <p class="bg-light text-dark">  demo credentials email - demo@gmail.com pW - demo@123</P>
                       <div class="text-center">
                           <a href="https://beamish-selkie-3b6673.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                           <a href="https://github.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
-            <div className="ee">
-          <a href = "https://fila-ecommerce-website.netlify.app/" target="blank" className="anchor">
-            <button className="codeBtn">Live Demo <i className="fas fa-level-down-alt" style={{marginLeft:"8px"}}></i></button>
-          </a>
-          <div className="credentials">
-            <div>
-              <p  className="demoCred" style={{color:"#ccd602" , fontWeight:"bold"}}>DEMO CREDENTIALS</p>
-              <p  className="demoCred" style={{color:"tomato"}}>UserName: </p>
-              <p  className="demoCred">surajpatils131297@gmail.com</p>
-              <p  className="demoCred" style={{color:"tomato"}}>Password :</p>
-              <p  className="demoCred"> admin123</p>
-            </div>
-          </div>
-          </div>
+            
                       </div>
                   </div>
               </div>
