--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                   <div class="card-body">
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
                       <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGO DB</p>
-                      <p class="bg-light text-dark"> DEMO CREDENTIALS     Email - demo@gmail.com,pw - demo@123</P>
+                      <p class="bg-light text-dark"> DEMO CREDENTIALS   <br> Email - demo@gmail.com <br> pw - demo@123</P>
                       <div class="text-center">
                           <a href="https://beamish-selkie-3b6673.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                           <a href="https://github.com/nivethacse/ecom" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -332,7 +332,7 @@
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
                           <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,MONGODB</p>
-                          <p class="bg-light text-dark">  DEMO CREDENTIALS   Email- demo@gmail.com,pw - demo@123</P>
+                          <p class="bg-light text-dark">  DEMO CREDENTIALS  <br> Email- demo@gmail.com <br> pw - demo@123</P>
                           <div class="text-center">
                               <a href="https://playful-nougat-ccc67e.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/shareapi" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -350,7 +350,7 @@
                       <div class="card-body">
                           <h4 class="card-title">EQUIPMENT RENTAL</h4>
                           <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGO DB</p>
-                          <p class="bg-light text-dark">  DEMO CREDENTIALS    Email - demo1@gmail.com,pw - demo12</P>
+                          <p class="bg-light text-dark">  DEMO CREDENTIALS  <br>  Email - demo1@gmail.com <br> pw - demo12</P>
                           <div class="text-center">
                               <a href="https://admirable-baklava-c966e9.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/equipment-rental-be/tree/main" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
