--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                   <img class="card-img-top" src="img/icenadfire.PNG" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">E-COMMERCE WEBSITE-</h4>
-                      <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGO DB</p>
+                      <p class="bg-light text-dark">REACTJS,MONGO DB,EXPRESS JS,NODE JS</p>
                       <p class="bg-light text-dark"> DEMO CREDENTIALS   <br> Email - demo@gmail.com <br> pw - demo@123</P>
                       <div class="text-center">
                           <a href="https://beamish-selkie-3b6673.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
@@ -331,7 +331,7 @@
                       <img class="card-img-top" src="img/sharre.PNG" alt="Card image" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">SHARE.IO</h4>
-                          <p class="bg-light text-dark"> -HTML,CSS,JS,REACTJS,MONGODB</p>
+                          <p class="bg-light text-dark"> REACTJS,MONGODB,EXPRESS JS,NODE JS</p>
                           <p class="bg-light text-dark">  DEMO CREDENTIALS  <br> Email- demo@gmail.com <br> pw - demo@123</P>
                           <div class="text-center">
                               <a href="https://playful-nougat-ccc67e.netlify.app/" class="btn btn-success" target="_blank"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
@@ -349,7 +349,7 @@
                       <img class="card-img-top" src="img/equipmental rental.PNG" style="width:100%" height="167">
                       <div class="card-body">
                           <h4 class="card-title">EQUIPMENT RENTAL</h4>
-                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGO DB</p>
+                          <p class="bg-light text-dark">REACTJS,MONGO DB,EXPRESS JS,NODE JS</p>
                           <p class="bg-light text-dark">  DEMO CREDENTIALS  <br>  Email - demo1@gmail.com <br> pw - demo12</P>
                           <div class="text-center">
                               <a href="https://admirable-baklava-c966e9.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
@@ -366,7 +366,7 @@
                       <img class="card-img-top" src="img/pinterest.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">PINTEREST CLONE</h4>
-                          <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,MONGODB</p>
+                          <p class="bg-light text-dark">-REACTJS,MONGODB,EXPRESS JS,NODE JS</p>
                           <div class="text-center">
                               <a href="https://quizzical-ptolemy-b49bdf.netlify.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                               <a href="https://github.com/nivethacse/pinterest-clo" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -395,7 +395,7 @@
                       <img class="card-img-top" src="img/SLAM BOOK.png" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">SLAM BOOK</h4>
-                          <p class="bg-light text-dark">HTML,CSS,JS,REACTJS,MONGODB</p>
+                          <p class="bg-light text-dark">REACTJS,FIREBASE,EXPESS JS,NODE JS</p>
                           <div class="text-center">
                             <a href="https://memoriesssss.herokuapp.com/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                              <a href="https://github.com/nivethacse/Memories" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
