--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                       <img class="card-img-top" src="img/fd.PNG" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">TEXT EDITOR</h4>
-                          <p class="bg-light text-dark">-HTML,CSS,JS,REACTJS,MONGODB</p>
+                          <p class="bg-light text-dark">-HTML,CSS,JS,    REACTJS</p>
                           <div class="text-center">
                                <a href="https://te-five.vercel.app/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                                <a href="https://github.com/nivethacse/text-editor" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
@@ -395,7 +395,7 @@
                       <img class="card-img-top" src="img/SLAM BOOK.png" alt="Card image" style="width:100%">
                       <div class="card-body">
                           <h4 class="card-title">SLAM BOOK</h4>
-                          <p class="bg-light text-dark">REACTJS,FIREBASE,EXPESS JS,NODE JS</p>
+                          <p class="bg-light text-dark">JAVASCRIPT,REACTJS,FIREBASE,EXPESS JS,NODE JS</p>
                           <div class="text-center">
                             <a href="https://memoriesssss.herokuapp.com/" target="_blank" class="btn btn-success"><i class="bi bi-link-45deg"></i>&ensp;Demo</a>
                              <a href="https://github.com/nivethacse/Memories" class="btn btn-dark" target="_blank"><i class="bi bi-github"></i>&ensp;Github</a>
